--- a/_config.yml
+++ b/_config.yml
@@ -7,8 +7,11 @@ description: > # this means to ignore newlines until "baseurl:"
   Google search results) and in your feed.xml site description.
 baseurl: "/" # the subpath of your site, e.g. /blog
 url: "https://davidmarkhill.github.io" # the base hostname & protocol for your site, e.g. http://example.com
-github_username:  davidmarkhill # replace with your_github_username or comment to remove link from footer
-instagram_username: david_109_9 # replace with your_instagram_username or comment to remove link from footer
+github_username:  davidmarkhill
+instagram_username: david_109_9
+facebook_username: Davidhill25
+linkedin_username: david-hill-90528610b
+bitbucket_username: DavidMarkHill
 social:
   name: David Hill
   links:
